# ndk-samples

./: .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  ARCHITECTURE.md  CONTRIBUTING.md  Configure-NDK-Path.md  Home.md  README.md  REFERENCE.md  appveyor.yml  build.gradle  gradle.properties  gradle_all.sh  settings.gradle
audio-echo/app/src/main/cpp/: CMakeLists.txt  android_debug.h  audio_common.cpp  audio_common.h  audio_effect.cpp  audio_effect.h  audio_main.cpp  audio_player.cpp  audio_player.h  audio_recorder.cpp  audio_recorder.h  buf_manager.h  debug_utils.cpp  debug_utils.h  jni_interface.h  ndk-stl-config.cmake
base/src/main/cpp/: CMakeLists.txt  logging.cpp  logging_splitters.h
base/src/main/cpp/include/base/: errno_restorer.h  logging.h  macros.h
bitmap-plasma/app/src/main/cpp/: Application.mk  CMakeLists.txt  plasma.c
camera/basic/src/main/cpp/: CMakeLists.txt  android_main.cpp  camera_engine.cpp  camera_engine.h  camera_listeners.cpp  camera_manager.cpp  camera_manager.h  camera_ui.cpp  image_reader.cpp  image_reader.h
camera/texture-view/src/main/cpp/: CMakeLists.txt  android_main.cpp  camera_engine.cpp  camera_engine.h  camera_listeners.cpp  camera_manager.cpp  camera_manager.h
cmake/endless-tunnel/src/main/cpp/: CMakeLists.txt  dialog_scene.cpp  engine.hpp  indexbuf.hpp  input_util.cpp  joystick-support.hpp  native_engine.hpp  obstacle_generator.cpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  sfxman.hpp  shader.cpp  shape_renderer.cpp  texture.cpp  texture.hpp  ui_scene.hpp  util.hpp  vertexbuf.cpp  vertexbuf.hpp
cmake/endless-tunnel/src/main/cpp/glm/: fwd.hpp  mat3x2.hpp  mat4x2.hpp  mat4x4.hpp  vec3.hpp  vec4.hpp
display-p3/image-view/src/main/cpp/: AndroidMain.cpp  AppTexture.cpp  AssetTexture.cpp  AssetTexture.h  AssetUtil.cpp  AssetUtil.h  CMakeLists.txt  ColorSpaceTransform.cpp  ColorSpaceTransform.h  ImageViewEngine.cpp  ImageViewEngine.h  InputEventHandler.cpp  ShaderProgram.cpp  ShaderProgram.h  WideColorCtx.cpp  android_debug.h  common.h  gldebug.cpp  gldebug.h  simple_png.cpp  simple_png.h
endless-tunnel/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  anim.cpp  anim.hpp  ascii_to_geom.cpp  ascii_to_geom.hpp  common.hpp  dialog_scene.cpp  dialog_scene.hpp  engine.hpp  game_consts.hpp  indexbuf.cpp  indexbuf.hpp  input_util.cpp  input_util.hpp  jni_util.cpp  jni_util.hpp  joystick-support.hpp  native_engine.cpp  native_engine.hpp  obstacle.cpp  obstacle.hpp  obstacle_generator.cpp  obstacle_generator.hpp  our_key_codes.hpp  our_shader.cpp  our_shader.hpp  play_scene.cpp  play_scene.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  sfxman.cpp  sfxman.hpp  shader.cpp  shader.hpp  shape_renderer.cpp  shape_renderer.hpp  simplegeom.hpp  (+14 more)
endless-tunnel/app/src/main/cpp/data/: alphabet.inl  ascii_art.inl  blurb.inl  cube_geom.inl  our_shader.inl  strings.inl  tunnel_geom.inl
endless-tunnel/app/src/main/cpp/glm/: CMakeLists.txt  common.hpp  exponential.hpp  ext.hpp  fwd.hpp  geometric.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
gles3jni/app/src/main/cpp/: Android-11.mk  Android-18.mk  CMakeLists.txt  RendererES2.cpp  RendererES3.cpp  gl3stub.c  gl3stub.c.inc  gl3stub.h  gl3stub_wrapper.c  gles3jni.cpp  gles3jni.h
hello-cdep/app/src/main/cpp/: CMakeLists.txt  hello-cdep.cpp
hello-gl2/app/src/main/cpp/: CMakeLists.txt  gl3stub.c  gl3stub.h  gl_code.cpp
hello-libs/app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  hello-libs.cpp
hello-libs/gen-libs/src/main/cpp/: CMakeLists.txt
hello-libs/gen-libs/src/main/cpp/gmath/: CMakeLists.txt
hello-libs/gen-libs/src/main/cpp/gperf/: CMakeLists.txt
hello-neon/app/src/main/cpp/: Android.mk  CMakeLists.txt  NEON_2_SSE.h  helloneon-intrinsics.c  helloneon-intrinsics.h  helloneon.c
hello-oboe/app/src/main/cpp/: CMakeLists.txt  OboeSinePlayer.h  hello-oboe.cpp  native-lib.cpp
hello-vulkan/app/src/main/cpp/: CMakeLists.txt  hellovk.cpp  hellovk.h  vk_main.cpp
hello-vulkan/app/src/main/cpp/vk_triangle/: hellovk.h
native-activity/app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  main.c  main.cpp
native-audio/app/src/main/cpp/: CMakeLists.txt  android_clip.h  hello_clip.h  native-audio-jni.c
native-codec/app/src/main/cpp/: Android.mk  CMakeLists.txt  looper.cpp  looper.h  native-codec-jni.cpp
native-media/app/src/main/cpp/: Android.mk  CMakeLists.txt  android_fopen.c  android_fopen.h  native-media-jni.c
native-midi/app/src/main/cpp/: AndroidDebug.h  AppMidiManager.cpp  CMakeLists.txt  MainActivity.cpp  MidiSpec.h  midi_manager.cpp
nn-samples/basic/src/main/cpp/: CMakeLists.txt  nn_sample.cpp  simple_model.cpp  simple_model.h
nn_sample/app/src/main/cpp/: CMakeLists.txt  nn_sample.cpp  simple_model.cpp
nnapi/simple_model/src/main/cpp/: CMakeLists.txt  app_main.cpp  application_engine.h  simple_model.cpp  simple_model.h
orderfile/app/src/main/cpp/: CMakeLists.txt  orderfile.cpp
pgo/app/src/main/cpp/: CMakeLists.txt  pgodemo.cpp
san-angeles/app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  app-android.c  app.h  cams.h  demo.c  importgl.c  importgl.h  shapes.h
teapots/common/ndk_helper/: CMakeLists.txt  GLContext.cpp  GLContext.h  JNIHelper.cpp  JNIHelper.h  NDKHelper.h  gestureDetector.cpp  gestureDetector.h  gl3stub.c  gl3stub.cpp  gl3stub.h  interpolator.cpp  interpolator.h  perfMonitor.cpp  perfMonitor.h  sensorManager.cpp  sensorManager.h  shader.cpp  shader.h  tapCamera.cpp  tapCamera.h  vecmath.cpp  vecmath.h
vectorization/src/main/cpp/: CMakeLists.txt  auto_vectorization.h  benchmark.cpp  benchmark.h  clang_vector.h  jni.cpp  libapp.map.txt  matrix.h  omp_simd.h
webp/view/: CMakeLists.txt  build.gradle
webp/view/src/main/: AndroidManifest.xml
webp/view/src/main/cpp/: CMakeLists.txt  webp_decode.cpp  webp_decode.h  webp_view.cpp
webp/view/src/main/res/values/: strings.xml
(+2296 files in other folders)
